Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -26,21 +26,23 @@ date.time: H:i:s
 # Classes
 
 # Utility.php
-"class_utility_1": "Session time is over, please login again."
-"class_utility_2": "Old password doesn't match!"
-"class_utility_3": "New password and New confirm password doesn't match!"
-"class_utility_4": "Password and Confirm password doesn't match!"
-"class_utility_5": "Select parent:"
-"class_utility_6": "Select"
+"classUtility_1": "Session time is over, please login again."
+"classUtility_2": "Old password doesn't match!"
+"classUtility_3": "New password and New confirm password doesn't match!"
+"classUtility_4": "Password and Confirm password doesn't match!"
+"classUtility_5": "Select parent:"
+"classUtility_6": "Select"
+"classUtility_7": "Roles"
+"classUtility_8": "This page"
 
 # Upload.php
-"class_upload_1": "Error max size, limit is: "
-"class_upload_2": "Error type, are allowed only: "
-"class_upload_3": "Error measures, are allowed only: "
-"class_upload_4": "Error chunk size."
-"class_upload_5": "File uploaded successfully."
-"class_upload_6": "Unable to move file to path."
-"class_upload_7": "Upload aborted."
+"classUpload_1": "Error max size, limit is: "
+"classUpload_2": "Error type, are allowed only: "
+"classUpload_3": "Error measures, are allowed only: "
+"classUpload_4": "Error chunk size."
+"classUpload_5": "File uploaded successfully."
+"classUpload_6": "Unable to move file to path."
+"classUpload_7": "Upload aborted."
 
 # ---
 # Controller / Control panel
@@ -195,10 +197,13 @@ date.time: H:i:s
 "moduleSelectionFormType_1": "Select"
 
 # PageFormType.php
-"pageFormType_1": "Select"
-"pageFormType_2": "No"
-"pageFormType_3": "Yes"
-"pageFormType_4": "This page"
+"pageFormType_1": "Parent"
+"pageFormType_2": "Protected"
+"pageFormType_3": "Show in menu"
+"pageFormType_4": "Comment"
+"pageFormType_5": "Only link"
+"pageFormType_6": "No"
+"pageFormType_7": "Yes"
 
 # PageSelectionFormType.php
 "pageSelectionFormType_1": "Select"
@@ -237,12 +242,12 @@ date.time: H:i:s
 "loader_1": "Loading..."
 
 # table_and_pagination.html.twig
-"table_and_pagination_1": "Refresh"
-"table_and_pagination_2": "Delete all"
-"table_and_pagination_3": "Search"
-"table_and_pagination_4": "Previous"
-"table_and_pagination_5": "Next"
-"table_and_pagination_6": "Elements founded:"
+"tableAndPagination_1": "Refresh"
+"tableAndPagination_2": "Delete all"
+"tableAndPagination_3": "Search"
+"tableAndPagination_4": "Previous"
+"tableAndPagination_5": "Next"
+"tableAndPagination_6": "Elements founded:"
 
 # upload.html.twig
 "upload_1": "Start"
@@ -258,31 +263,31 @@ date.time: H:i:s
 # Views / Render
 
 # control_panel.html.twig
-"control_panel_1": "Profile"
-"control_panel_2": "Payments"
-"control_panel_3": "Pages"
-"control_panel_4": "Users"
-"control_panel_5": "Modules"
-"control_panel_6": "Roles"
-"control_panel_7": "Settings"
-"control_panel_8": "Profile section."
-"control_panel_9": "Payments section."
-"control_panel_10": "Pages section."
-"control_panel_11": "Users section."
-"control_panel_12": "Modules section."
-"control_panel_13": "Roles section."
-"control_panel_14": "Settings section."
-"control_panel_15": "Really delete this payment?"
-"control_panel_16": "Really delete all payments?"
-"control_panel_17": "Really delete this page?"
-"control_panel_18": "Really delete all pages?"
-"control_panel_19": "Really delete this user?"
-"control_panel_20": "Really delete all users?"
-"control_panel_21": "Really delete this module?"
-"control_panel_22": "Really delete all modules?"
-"control_panel_23": "Really delete this role?"
-"control_panel_24": "Really delete all roles?"
-"control_panel_25": "Really delete this language?"
+"controlPanel_1": "Profile"
+"controlPanel_2": "Payments"
+"controlPanel_3": "Pages"
+"controlPanel_4": "Users"
+"controlPanel_5": "Modules"
+"controlPanel_6": "Roles"
+"controlPanel_7": "Settings"
+"controlPanel_8": "Profile section."
+"controlPanel_9": "Payments section."
+"controlPanel_10": "Pages section."
+"controlPanel_11": "Users section."
+"controlPanel_12": "Modules section."
+"controlPanel_13": "Roles section."
+"controlPanel_14": "Settings section."
+"controlPanel_15": "Really delete this payment?"
+"controlPanel_16": "Really delete all payments?"
+"controlPanel_17": "Really delete this page?"
+"controlPanel_18": "Really delete all pages?"
+"controlPanel_19": "Really delete this user?"
+"controlPanel_20": "Really delete all users?"
+"controlPanel_21": "Really delete this module?"
+"controlPanel_22": "Really delete all modules?"
+"controlPanel_23": "Really delete this role?"
+"controlPanel_24": "Really delete all roles?"
+"controlPanel_25": "Really delete this language?"
 
 # index.html.twig
 "index_1": "WEBSITE CURRENTLY"
@@ -302,22 +307,22 @@ date.time: H:i:s
 "index_15": "Collapse"
 
 # page_comment.html.twig
-"page_comment_1": "Message from user: "
-"page_comment_2": "Replay to user: "
-"page_comment_3": "Argument"
-"page_comment_4": "Comments are disabled."
-"page_comment_5": "Save"
-"page_comment_6": "Modify"
+"pageComment_1": "Message from user: "
+"pageComment_2": "Replay to user: "
+"pageComment_3": "Argument"
+"pageComment_4": "Comments are disabled."
+"pageComment_5": "Save"
+"pageComment_6": "Modify"
 
 # language_page.html.twig
-"language_page_1": "Change page language without save data?"
+"languagePage_1": "Change page language without save data?"
 
 # recover_password.html.twig
-"recover_password_1": "Recover password form"
-"recover_password_2": "Email"
-"recover_password_3": "Change password form"
-"recover_password_4": "Password"
-"recover_password_5": "Password confirm"
+"recoverPassword_1": "Recover password form"
+"recoverPassword_2": "Email"
+"recoverPassword_3": "Change password form"
+"recoverPassword_4": "Password"
+"recoverPassword_5": "Password confirm"
 
 # registration.html.twig
 "registration_1": "Private"
@@ -345,129 +350,134 @@ date.time: H:i:s
 # Views / Render / Control panel
 
 # module_creation.html.twig
-"module_creation_1": "Module creation form"
-"module_creation_2": "Position"
-"module_creation_3": "Position in column"
-"module_creation_4": "Name"
-"module_creation_5": "Label"
-"module_creation_6": "File name"
+"moduleCreation_1": "Module creation form"
+"moduleCreation_2": "Position"
+"moduleCreation_3": "Position in column"
+"moduleCreation_4": "Name"
+"moduleCreation_5": "Label"
+"moduleCreation_6": "File name"
 
 # module_deletion.html.twig
-"module_deletion_1": "Module deletion"
-"module_deletion_2": "Warning! If you delete the module is impossible return back."
+"moduleDeletion_1": "Module deletion"
+"moduleDeletion_2": "Warning! If you delete the module is impossible return back."
 
 # module_profile.html.twig
-"module_profile_1": "Module profile form"
-"module_profile_2": "Position"
-"module_profile_3": "Position in column"
-"module_profile_4": "Name"
-"module_profile_5": "Label"
-"module_profile_6": "File name"
-"module_profile_7": "Active"
+"moduleProfile_1": "Module profile form"
+"moduleProfile_2": "Position"
+"moduleProfile_3": "Position in column"
+"moduleProfile_4": "Name"
+"moduleProfile_5": "Label"
+"moduleProfile_6": "File name"
+"moduleProfile_7": "Active"
 
 # module_drag.html.twig
-"module_drag_1": "Modules sort form"
-"module_drag_2": "Header"
-"module_drag_3": "Left"
-"module_drag_4": "Center"
-"module_drag_5": "Right"
+"moduleDrag_1": "Modules sort form"
+"moduleDrag_2": "Header"
+"moduleDrag_3": "Left"
+"moduleDrag_4": "Center"
+"moduleDrag_5": "Right"
 
 # module_selection.html.twig
-"module_selection_1": "Modules selection form"
-"module_selection_2": "Id"
-"module_selection_3": "Select"
-"module_selection_4": "Name"
-"module_selection_5": "File name"
-"module_selection_6": "Active"
-"module_selection_7": "Remove"
-"module_selection_8": "Modules"
+"moduleSelection_1": "Modules selection form"
+"moduleSelection_2": "Id"
+"moduleSelection_3": "Select"
+"moduleSelection_4": "Name"
+"moduleSelection_5": "File name"
+"moduleSelection_6": "Active"
+"moduleSelection_7": "Remove"
+"moduleSelection_8": "Modules"
 
 # page_creation.html.twig
-"page_creation_1": "Page creation form"
-"page_creation_2": "Alias"
-"page_creation_3": "Parent"
-"page_creation_4": "Title"
-"page_creation_5": "Controller action"
-"page_creation_6": "Argument"
-"page_creation_7": "Roles"
-"page_creation_8": "Protected"
-"page_creation_9": "Show in menu"
-"page_creation_10": "Position in menu"
-"page_creation_11": "Menu name"
-"page_creation_12": "Comment"
-"page_creation_13": "Only link"
-"page_creation_14": "Link"
+"pageCreation_1": "Page creation form"
+"pageCreation_2": "Alias"
+"pageCreation_3": "Parent"
+"pageCreation_4": "Title"
+"pageCreation_5": "Controller action"
+"pageCreation_6": "Argument"
+"pageCreation_7": "Roles"
+"pageCreation_8": "Protected"
+"pageCreation_9": "Show in menu"
+"pageCreation_10": "Position in menu"
+"pageCreation_11": "Menu name"
+"pageCreation_12": "Comment"
+"pageCreation_13": "Only link"
+"pageCreation_14": "Link"
+"pageCreation_15": "Sort up"
+"pageCreation_16": "Sort down"
 
 # page_deletion.html.twig
-"page_deletion_1": "Page deletion"
-"page_deletion_2": "Warning! If you delete the page is impossible return back."
-"page_deletion_3": "All"
-"page_deletion_4": "Parent new"
+"pageDeletion_1": "Warning! If you delete the page is impossible return back."
+"pageDeletion_2": "All"
+"pageDeletion_3": "Parent new"
 
 # page_profile.html.twig
-"page_profile_1": "Page profile form"
-"page_profile_2": "Language"
-"page_profile_3": "Alias"
-"page_profile_4": "Parent"
-"page_profile_5": "Title"
-"page_profile_6": "Controller action"
-"page_profile_7": "Argument"
-"page_profile_8": "Roles"
-"page_profile_9": "Protected"
-"page_profile_10": "Show in menu"
-"page_profile_11": "Position in menu"
-"page_profile_12": "Menu name"
-"page_profile_13": "Comment"
-"page_profile_14": "Only link"
-"page_profile_15": "Link"
-"page_profile_16": "Created by: "
-"page_profile_17": "Creation: "
-"page_profile_18": "Modified By: "
-"page_profile_19": "Modification: "
+"pageProfile_1": "Page profile form"
+"pageProfile_2": "Language"
+"pageProfile_3": "Alias"
+"pageProfile_4": "Parent"
+"pageProfile_5": "Title"
+"pageProfile_6": "Controller action"
+"pageProfile_7": "Argument"
+"pageProfile_8": "Roles"
+"pageProfile_9": "Protected"
+"pageProfile_10": "Show in menu"
+"pageProfile_11": "Position in menu"
+"pageProfile_12": "Menu name"
+"pageProfile_13": "Comment"
+"pageProfile_14": "Only link"
+"pageProfile_15": "Link"
+"pageProfile_16": "Created by: "
+"pageProfile_17": "Creation: "
+"pageProfile_18": "Modified By: "
+"pageProfile_19": "Modification: "
+"pageProfile_20": "Sort up"
+"pageProfile_21": "Sort down"
 
 # page_selection.html.twig
-"page_selection_1": "Pages selection form"
-"page_selection_2": "Id"
-"page_selection_3": "Select"
-"page_selection_4": "Alias"
-"page_selection_5": "Title"
-"page_selection_6": "Menu name"
-"page_selection_7": "Protected"
-"page_selection_8": "Show in menu"
-"page_selection_9": "Only link"
-"page_selection_10": "Remove"
-"page_selection_11": "Pages"
+"pageSelection_1": "Pages selection form"
+"pageSelection_2": "Pages selection form"
+"pageSelection_3": "Id"
+"pageSelection_4": "Select"
+"pageSelection_5": "Alias"
+"pageSelection_6": "Title"
+"pageSelection_7": "Menu name"
+"pageSelection_8": "Protected"
+"pageSelection_9": "Show in menu"
+"pageSelection_10": "Only link"
+"pageSelection_11": "Remove"
+"pageSelection_12": "Pages"
 
 # payment_deletion.html.twig
-"payment_deletion_1": "Payment deletion"
-"payment_deletion_2": "Warning! If you delete the payment is impossible return back."
+"paymentDeletion_1": "Warning! If you delete the payment is impossible return back."
 
 # payment_profile.html.twig
-"payment_profile_1": "Payment profile"
-"payment_profile_2": "Transaction"
-"payment_profile_3": "Date"
-"payment_profile_4": "Status"
-"payment_profile_5": "Payer"
-"payment_profile_6": "Receiver"
-"payment_profile_7": "Currency code"
-"payment_profile_8": "Item name"
-"payment_profile_9": "Amount"
-"payment_profile_10": "Quantity"
+"paymentProfile_1": "Payment profile"
+"paymentProfile_2": "Transaction"
+"paymentProfile_3": "Date"
+"paymentProfile_4": "Status"
+"paymentProfile_5": "Payer"
+"paymentProfile_6": "Receiver"
+"paymentProfile_7": "Currency code"
+"paymentProfile_8": "Item name"
+"paymentProfile_9": "Amount"
+"paymentProfile_10": "Quantity"
 
 # payment_selection.html.twig
-"payment_selection_1": "Payments selection form"
-"payment_selection_2": "Id"
-"payment_selection_3": "Select"
-"payment_selection_4": "Transaction"
-"payment_selection_5": "Date"
-"payment_selection_6": "Status"
-"payment_selection_7": "Payer"
-"payment_selection_8": "Remove"
-"payment_selection_9": "Payments"
+"paymentSelection_1": "Payments selection form"
+"paymentSelection_2": "Here you can manage the payments of the chosen user."
+"paymentSelection_3": "Id"
+"paymentSelection_4": "Select"
+"paymentSelection_5": "Transaction"
+"paymentSelection_6": "Date"
+"paymentSelection_7": "Status"
+"paymentSelection_8": "Payer"
+"paymentSelection_9": "Remove"
+"paymentSelection_10": "Payments"
 
 # payment_user_selection.html.twig
-"payment_user_selection_1": "Payments user selection form"
-"payment_user_selection_2": "Users"
+"paymentUserSelection_1": "Payments user selection form"
+"paymentUserSelection_2": "Select the user to see the respective payments."
+"paymentUserSelection_3": "Users"
 
 # profile.html.twig
 "profile_1": "Profile form"
@@ -489,38 +499,38 @@ date.time: H:i:s
 "profile_17": "Address"
 
 # profile_credit.html.twig
-"profile_credit_1": "Profile credit form"
-"profile_credit_2": "Charge your credits to be used to make purchases."
-"profile_credit_3": "Current credit:"
-"profile_credit_4": "One credit value:"
-"profile_credit_5": "credit"
+"profileCredit_1": "Profile credit form"
+"profileCredit_2": "Charge your credits to be used to make purchases."
+"profileCredit_3": "Current credit:"
+"profileCredit_4": "One credit value:"
+"profileCredit_5": "credit"
 
 # profile_password.html.twig
-"profile_password_1": "Profile password form"
-"profile_password_2": "Change your password for access to this website."
-"profile_password_3": "Old"
-"profile_password_4": "New"
-"profile_password_5": "New confirm"
+"profilePassword_1": "Profile password form"
+"profilePassword_2": "Change your password for access to this website."
+"profilePassword_3": "Old"
+"profilePassword_4": "New"
+"profilePassword_5": "New confirm"
 
 # roleUser_creation.html.twig
-"roleUser_creation_1": "Role creation form"
-"roleUser_creation_2": "Level"
+"roleUserCreation_1": "Role creation form"
+"roleUserCreation_2": "Level"
 
 # roleUser_deletion.html.twig
-"roleUser_deletion_1": "Role deletion"
-"roleUser_deletion_2": "Warning! If you delete the role is impossible return back."
+"roleUserDeletion_1": "Role deletion"
+"roleUserDeletion_2": "Warning! If you delete the role is impossible return back."
 
 # roleUser_profile.html.twig
-"roleUser_profile_1": "Role profile form"
-"roleUser_profile_2": "Level"
+"roleUserProfile_1": "Role profile form"
+"roleUserProfile_2": "Level"
 
 # roleUser_selection.html.twig
-"roleUser_selection_1": "Roles selection form"
-"roleUser_selection_2": "Id"
-"roleUser_selection_3": "Select"
-"roleUser_selection_4": "Level"
-"roleUser_selection_5": "Remove"
-"roleUser_selection_6": "Roles"
+"roleUserSelection_1": "Roles selection form"
+"roleUserSelection_2": "Id"
+"roleUserSelection_3": "Select"
+"roleUserSelection_4": "Level"
+"roleUserSelection_5": "Remove"
+"roleUserSelection_6": "Roles"
 
 # setting.html.twig
 "setting_1": "Setting form"
@@ -550,66 +560,66 @@ date.time: H:i:s
 "setting_25": "Page comment active"
 
 # user_creation.html.twig
-"user_creation_1": "User creation form"
-"user_creation_2": "Role"
-"user_creation_3": "Username"
-"user_creation_4": "Name"
-"user_creation_5": "Surname"
-"user_creation_6": "Email"
-"user_creation_7": "Telephone"
-"user_creation_8": "Born"
-"user_creation_9": "Gender"
-"user_creation_10": "Fiscal code"
-"user_creation_11": "Company name"
-"user_creation_12": "Vat"
-"user_creation_13": "Website"
-"user_creation_14": "State"
-"user_creation_15": "City"
-"user_creation_16": "Zip"
-"user_creation_17": "Address"
-"user_creation_18": "Password"
-"user_creation_19": "Password confirm"
+"userCreation_1": "User creation form"
+"userCreation_2": "Role"
+"userCreation_3": "Username"
+"userCreation_4": "Name"
+"userCreation_5": "Surname"
+"userCreation_6": "Email"
+"userCreation_7": "Telephone"
+"userCreation_8": "Born"
+"userCreation_9": "Gender"
+"userCreation_10": "Fiscal code"
+"userCreation_11": "Company name"
+"userCreation_12": "Vat"
+"userCreation_13": "Website"
+"userCreation_14": "State"
+"userCreation_15": "City"
+"userCreation_16": "Zip"
+"userCreation_17": "Address"
+"userCreation_18": "Password"
+"userCreation_19": "Password confirm"
 
 # user_deletion.html.twig
-"user_deletion_1": "User deletion"
-"user_deletion_2": "Warning! If you delete the user is impossible return back."
+"userDeletion_1": "User deletion"
+"userDeletion_2": "Warning! If you delete the user is impossible return back."
 
 # user_profile.html.twig
-"user_profile_1": "User profile form"
-"user_profile_2": "Role"
-"user_profile_3": "Username"
-"user_profile_4": "Name"
-"user_profile_5": "Surname"
-"user_profile_6": "Email"
-"user_profile_7": "Telephone"
-"user_profile_8": "Born"
-"user_profile_9": "Gender"
-"user_profile_10": "Fiscal code"
-"user_profile_11": "Company name"
-"user_profile_12": "Vat"
-"user_profile_13": "Website"
-"user_profile_14": "State"
-"user_profile_15": "City"
-"user_profile_16": "Zip"
-"user_profile_17": "Address"
-"user_profile_18": "Password"
-"user_profile_19": "Password confirm"
-"user_profile_20": "Not locked"
-"user_profile_21": "Credit"
+"userProfile_1": "User profile form"
+"userProfile_2": "Role"
+"userProfile_3": "Username"
+"userProfile_4": "Name"
+"userProfile_5": "Surname"
+"userProfile_6": "Email"
+"userProfile_7": "Telephone"
+"userProfile_8": "Born"
+"userProfile_9": "Gender"
+"userProfile_10": "Fiscal code"
+"userProfile_11": "Company name"
+"userProfile_12": "Vat"
+"userProfile_13": "Website"
+"userProfile_14": "State"
+"userProfile_15": "City"
+"userProfile_16": "Zip"
+"userProfile_17": "Address"
+"userProfile_18": "Password"
+"userProfile_19": "Password confirm"
+"userProfile_20": "Not locked"
+"userProfile_21": "Credit"
 
 # user_selection.html.twig
-"user_selection_1": "Users selection form"
-"user_selection_2": "Id"
-"user_selection_3": "Select"
-"user_selection_4": "Role"
-"user_selection_5": "Username"
-"user_selection_6": "Name"
-"user_selection_7": "Surname"
-"user_selection_8": "Email"
-"user_selection_9": "Company name"
-"user_selection_10": "Not locked"
-"user_selection_11": "Remove"
-"user_selection_12": "Users"
+"userSelection_1": "Users selection form"
+"userSelection_2": "Id"
+"userSelection_3": "Select"
+"userSelection_4": "Role"
+"userSelection_5": "Username"
+"userSelection_6": "Name"
+"userSelection_7": "Surname"
+"userSelection_8": "Email"
+"userSelection_9": "Company name"
+"userSelection_10": "Not locked"
+"userSelection_11": "Remove"
+"userSelection_12": "Users"
 
 # ---
 # Views / Render / Module
@@ -628,10 +638,10 @@ date.time: H:i:s
 "authentication_11": "Forgot password?"
 
 # page_view.html.twig
-"page_view_1": "Created by: "
-"page_view_2": "Creation: "
-"page_view_3": "Modified By: "
-"page_view_4": "Modification: "
+"pageView_1": "Created by: "
+"pageView_2": "Creation: "
+"pageView_3": "Modified By: "
+"pageView_4": "Modification: "
 
 # ---
 # Views / Render / Static
@@ -682,6 +692,6 @@ date.time: H:i:s
 
 # ---
 # Widget date picker
-"widget_date_picker_1": "Today"
-"widget_date_picker_2": "Clear"
-"widget_date_picker_3": "Confirm"
+"widgetDatePicker_1": "Today"
+"widgetDatePicker_2": "Clear"
+"widgetDatePicker_3": "Confirm"
