Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.en.yml
@@ -31,9 +31,8 @@ date.time: H:i:s
 "classUtility_3": "New password and New confirm password doesn't match!"
 "classUtility_4": "Password and Confirm password doesn't match!"
 "classUtility_5": "Select parent:"
-"classUtility_6": "Select"
-"classUtility_7": "Roles"
-"classUtility_8": "This page"
+"classUtility_6": "Roles"
+"classUtility_7": "This page"
 
 # Upload.php
 "classUpload_1": "Error max size, limit is: "
@@ -655,40 +654,21 @@ date.time: H:i:s
 
 # ---
 # Wysiwyg
-"wysiwyg_1": "Link creation"
-"wysiwyg_2": "Href: "
-"wysiwyg_3": "Text: "
-"wysiwyg_4": "Image creation"
-"wysiwyg_5": "Name with extension: "
-"wysiwyg_6": "Responsive: "
-"wysiwyg_7": "Width: "
-"wysiwyg_8": "Height: "
+"wysiwyg_1": "Text format"
+"wysiwyg_2": "Text size"
+"wysiwyg_3": "Settings"
+"wysiwyg_4": "Close"
+"wysiwyg_5": "Link creation"
+"wysiwyg_6": "Insert full url"
+"wysiwyg_7": "Insert full or relative url"
+"wysiwyg_8": "Insert url or path"
 "wysiwyg_9": "Button creation"
-"wysiwyg_10": "Style: "
-"wysiwyg_11": "Class: "
-"wysiwyg_12": "Href: "
-"wysiwyg_13": "Text: "
-"wysiwyg_14": "Table creation"
-"wysiwyg_15": "Rows: "
-"wysiwyg_16": "Columns: "
-"wysiwyg_17": "Width: "
-"wysiwyg_18": "Format"
-"wysiwyg_19": "Size"
-"wysiwyg_20": "Link settings"
-"wysiwyg_21": "Image settings"
-"wysiwyg_22": "Button settings"
-"wysiwyg_23": "Table settings"
-"wysiwyg_24": "Margin (Left - Right): "
-"wysiwyg_25": "Padding: "
-"wysiwyg_26": "Desktop: "
-"wysiwyg_27": "Mobile: "
-"wysiwyg_28": "Offset: "
-"wysiwyg_29": "Color: "
-"wysiwyg_30": "Row: "
-"wysiwyg_31": "Column: "
-"wysiwyg_32": "Rowspan: "
-"wysiwyg_33": "Colspan: "
-"wysiwyg_34": "Ok"
+"wysiwyg_10": "Insert name"
+"wysiwyg_11": "Insert link"
+"wysiwyg_12": "Table creation"
+"wysiwyg_13": "Insert rows number"
+"wysiwyg_14": "Insert columns number"
+"wysiwyg_15": "Element settings"
 
 # ---
 # Widget date picker
