--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/translations/messages.it.yml
@@ -31,9 +31,8 @@ date.time: H:i:s
 "classUtility_3": "Nuova password e Conferma nuova password non corrispondono!"
 "classUtility_4": "Password e Conferma password non corrispondono!"
 "classUtility_5": "Seleziona genitore:"
-"classUtility_6": "Seleziona"
-"classUtility_7": "Ruoli"
-"classUtility_8": "Questa pagina"
+"classUtility_6": "Ruoli"
+"classUtility_7": "Questa pagina"
 
 # Upload.php
 "classUpload_1": "Errore dimensione massima, il limite è: "
@@ -655,40 +654,21 @@ date.time: H:i:s
 
 # ---
 # Wysiwyg
-"wysiwyg_1": "Creazione link"
-"wysiwyg_2": "Href: "
-"wysiwyg_3": "Testo: "
-"wysiwyg_4": "Creazione immagine"
-"wysiwyg_5": "Nome con estensione: "
-"wysiwyg_6": "Responsive: "
-"wysiwyg_7": "Larghezza: "
-"wysiwyg_8": "Altezza: "
-"wysiwyg_9": "Creazione pulsanti"
-"wysiwyg_10": "Stile: "
-"wysiwyg_11": "Classe: "
-"wysiwyg_12": "Href: "
-"wysiwyg_13": "Testo: "
-"wysiwyg_14": "Creazione tabella"
-"wysiwyg_15": "Righe: "
-"wysiwyg_16": "Colonne: "
-"wysiwyg_17": "Larghezza: "
-"wysiwyg_18": "Formato"
-"wysiwyg_19": "Dimensione"
-"wysiwyg_20": "Impostazioni link"
-"wysiwyg_21": "Impostazioni immagine"
-"wysiwyg_22": "Impostazioni pulsanti"
-"wysiwyg_23": "Impostazioni tabella"
-"wysiwyg_24": "Margin (Sinistra - destra): "
-"wysiwyg_25": "Padding: "
-"wysiwyg_26": "Desktop: "
-"wysiwyg_27": "Mobile: "
-"wysiwyg_28": "Offset: "
-"wysiwyg_29": "Colore: "
-"wysiwyg_30": "Riga: "
-"wysiwyg_31": "Colonna: "
-"wysiwyg_32": "Span riga: "
-"wysiwyg_33": "Span colonna: "
-"wysiwyg_34": "Ok"
+"wysiwyg_1": "Formato testo"
+"wysiwyg_2": "Dimensione testo"
+"wysiwyg_3": "Settaggi"
+"wysiwyg_4": "Chiudi"
+"wysiwyg_5": "Creazione link"
+"wysiwyg_6": "Inserisci l'url completo o relativo"
+"wysiwyg_7": "Creazione immagine"
+"wysiwyg_8": "Inserisci l'url o il percorso"
+"wysiwyg_9": "Creazione pulsante"
+"wysiwyg_10": "Inserisci il nome"
+"wysiwyg_11": "Inserisci il link"
+"wysiwyg_12": "Creazione tabella"
+"wysiwyg_13": "Inserisci il numero delle righe"
+"wysiwyg_14": "Inserisci il numero delle colonne"
+"wysiwyg_15": "Settaggi elemento"
 
 # ---
 # Widget date picker
