Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -377,20 +377,21 @@ date.time: H:i:s
 "pageSelectionFormType_1": "Alias"
 "pageSelectionFormType_2": "Select"
 
-"pageController_1": "Page create completed."
-"pageController_2": "Page not created!"
-"pageController_3": "Page not selected!"
-"pageController_4": "Page update completed."
-"pageController_5": "Page update not completed!"
-"pageController_6": "Page deletion completed."
-"pageController_7": "This page contain another pages, choise the action:"
-"pageController_8": "Delete all page"
-"pageController_9": "Change parent"
-"pageController_10": "All pages deletion completed."
-"pageController_11": "Parent changed."
-"pageController_12": "Page not deleted!"
-"pageController_13": "No"
-"pageController_14": "Yes"
+"pageController_1": "Roles"
+"pageController_2": "Page create completed."
+"pageController_3": "Page not created!"
+"pageController_4": "Page not selected!"
+"pageController_5": "Page update completed."
+"pageController_6": "Page update not completed!"
+"pageController_7": "Page deletion completed."
+"pageController_8": "This page contain another pages, choise the action:"
+"pageController_9": "Delete all page"
+"pageController_10": "Change parent"
+"pageController_11": "All pages deletion completed."
+"pageController_12": "Parent changed."
+"pageController_13": "Page not deleted!"
+"pageController_14": "No"
+"pageController_15": "Yes"
 
 # User
 "userCreation_1": "User creation form"
@@ -441,16 +442,17 @@ date.time: H:i:s
 "userSelectionFormType_1": "Username"
 "userSelectionFormType_2": "Select"
 
-"userController_1": "User creation completed."
-"userController_2": "User not created!"
-"userController_3": "User not selected!"
-"userController_4": "User update completed."
-"userController_5": "User update not completed!"
-"userController_6": "User deletion completed."
-"userController_7": "All users deletion completed."
-"userController_8": "User not deleted!"
-"userController_9": "No"
-"userController_10": "Yes"
+"userController_1": "Roles"
+"userController_2": "User creation completed."
+"userController_3": "User not created!"
+"userController_4": "User not selected!"
+"userController_5": "User update completed."
+"userController_6": "User update not completed!"
+"userController_7": "User deletion completed."
+"userController_8": "All users deletion completed."
+"userController_9": "User not deleted!"
+"userController_10": "No"
+"userController_11": "Yes"
 
 # Module
 "module_1": "Authentication"
@@ -581,10 +583,11 @@ date.time: H:i:s
 "settingFormType_23": "Cret active"
 "settingFormType_24": "Send"
 
-"settingController_1": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
-"settingController_2": "Setting update complete."
-"settingController_3": "Setting not saved!"
-"settingController_4": "Language deletion completed."
-"settingController_5": "Language update completed."
-"settingController_6": "Language creation completed."
-"settingController_7": "Language not created!"
+"settingController_1": "Roles maintenance"
+"settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
+"settingController_3": "Setting update complete."
+"settingController_4": "Setting not saved!"
+"settingController_5": "Language deletion completed."
+"settingController_6": "Language update completed."
+"settingController_7": "Language creation completed."
+"settingController_8": "Language not created!"
