Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -61,15 +61,16 @@ date.time: H:i:s
 "myPagePaymentSelection_10": "Send"
 
 "myPagePaymentProfile_1": "Payment profile"
-"myPagePaymentProfile_2": "Transaction"
-"myPagePaymentProfile_3": "Date"
-"myPagePaymentProfile_4": "Status"
-"myPagePaymentProfile_5": "Payer"
-"myPagePaymentProfile_6": "Receiver"
-"myPagePaymentProfile_7": "Currency code"
-"myPagePaymentProfile_8": "Item name"
-"myPagePaymentProfile_9": "Amount"
-"myPagePaymentProfile_10": "Quantity"
+"myPagePaymentProfile_2": "Id"
+"myPagePaymentProfile_3": "Transaction"
+"myPagePaymentProfile_4": "Date"
+"myPagePaymentProfile_5": "Status"
+"myPagePaymentProfile_6": "Payer"
+"myPagePaymentProfile_7": "Receiver"
+"myPagePaymentProfile_8": "Currency code"
+"myPagePaymentProfile_9": "Item name"
+"myPagePaymentProfile_10": "Amount"
+"myPagePaymentProfile_11": "Quantity"
 
 "myPagePaymentDeletion_1": "Warning! If you delete the payment is impossible return back."
 "myPagePaymentDeletion_2": "Delete"
@@ -302,15 +303,16 @@ date.time: H:i:s
 "paymentSelection_10": "Send"
 
 "paymentProfile_1": "Payment profile"
-"paymentProfile_2": "Transaction"
-"paymentProfile_3": "Date"
-"paymentProfile_4": "Status"
-"paymentProfile_5": "Payer"
-"paymentProfile_6": "Receiver"
-"paymentProfile_7": "Currency code"
-"paymentProfile_8": "Item name"
-"paymentProfile_9": "Amount"
-"paymentProfile_10": "Quantity"
+"paymentProfile_2": "Id"
+"paymentProfile_3": "Transaction"
+"paymentProfile_4": "Date"
+"paymentProfile_5": "Status"
+"paymentProfile_6": "Payer"
+"paymentProfile_7": "Receiver"
+"paymentProfile_8": "Currency code"
+"paymentProfile_9": "Item name"
+"paymentProfile_10": "Amount"
+"paymentProfile_11": "Quantity"
 
 "paymentDeletion_1": "Warning! If you delete the payment is impossible return back."
 "paymentDeletion_2": "Delete"
